<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <artifactId>onebusaway-gtfs-transformer</artifactId>

  <name>onebusaway-gtfs-transformer</name>
  <description>A Java library for transforming Google Transit Feed Spec feeds</description>

  <parent>
    <groupId>org.onebusaway</groupId>
    <artifactId>onebusaway-gtfs-modules</artifactId>
    <version>1.4.15-openmove-4</version>
  </parent>

  <dependencies>
    <dependency>
      <groupId>org.onebusaway</groupId>
      <artifactId>onebusaway-gtfs</artifactId>
      <version>1.4.15-openmove-4</version>
    </dependency>
    <dependency>
      <groupId>org.onebusaway</groupId>
      <artifactId>onebusaway-collections</artifactId>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20090211</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
          <version>${slf4j_version}</version>
      </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.kurtraschke</groupId>
      <artifactId>wsf-api</artifactId>
      <version>1.0</version>
    </dependency>
      <dependency>
          <groupId>org.onebusaway</groupId>
          <artifactId>onebusaway-cloud-api</artifactId>
          <version>${onebusaway_cloud_version}</version>
      </dependency>
    <dependency>
      <groupId>org.onebusaway</groupId>
      <artifactId>onebusaway-cloud-noop</artifactId>
      <version>${onebusaway_cloud_version}</version>
    </dependency>
	  <dependency>
	    <groupId>javax.xml.bind</groupId>
	    <artifactId>jaxb-api</artifactId>
	  </dependency>
	  <dependency>
	    <groupId>com.sun.xml.bind</groupId>
	    <artifactId>jaxb-core</artifactId>
	  </dependency>
	  <dependency>
	    <groupId>com.sun.xml.bind</groupId>
	    <artifactId>jaxb-impl</artifactId>
	  </dependency>
  </dependencies>

  <build>
    <finalName>onebusaway-gtfs-transformer</finalName>
    <plugins>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
            <configuration>
              <excludes combine.children="append">
                <exclude>src/test/resources/org/onebusaway/gtfs_transformer/**</exclude>
              </excludes>
            </configuration>
      </plugin>

  	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-compiler-plugin</artifactId>
		<configuration>
			<source>1.8</source>
			<target>1.8</target>
		</configuration>
	  </plugin>
    </plugins>
  </build>

</project>
